
    * #110840: Add messages I0020 and I0021 for reporting of suppressed messages
      and useless suppression pragmas. (patch by Torsten Marek)

    * #112728: Add warning E0604 for non-string objects in __all__
      (patch by Torsten Marek)

    * #113231: logging checker now looks at instances of Logger classes
      in addition to the base logging module. (patch by Mike Bryant)

--
    * #115580: fix erroneous W0212 (access to protected member) on super call
      (patch by Martin Pool)

    * #110853: fix a crash when an __init__ method in a base class has been
      created by assignment rather than direct function definition (patch by
      Torsten Marek)

    * #110838: fix pylint-gui crash when include-ids is activated (patch by
      Omega Weapon)

    * #110839: bind <F5> to Run button in pylint-gui

    * #112667: fix emission of reimport warnings for mixed imports and extend
      the testcase (patch by Torsten Marek)

    * #112698: fixed crashes related to non-inferable __all__ attributes and
      invalid __all__ contents (patch by Torsten Marek)

    * Include full warning id for I0020 and I0021 and make sure to flush
      warnings after each module, not at the end of the pylint run.
      (patch by Torsten Marek)

2012-10-05  --  0.26.0
    * #106534: add --ignore-imports option to code similarity checking
      and 'symilar' command line tool (patch by Ry4an Brase)

    * #104571: check for anomalous backslash escape, introducing new
      W1401 and W1402 messages (patch by Martin Pool)

    * #100707: check for boolop being used as exception class, introducing
      new W0711 message (patch by Tim Hatch)

    * #4014: improve checking of metaclass methods first args, introducing
      new C0204 message (patch by lothiraldan@gmail.com finalized by sthenault)

    * #4685: check for consistency of a module's __all__ variable,
      introducing new E0603 message

    * #105337: allow custom reporter in output-format (patch by Kevin Jing Qiu)
