@@ -12,7 +12,10 @@ ESCAPE_BACKSLASH = '\`'
 NEWLINE = "\n"
 OLD_ESCAPES = '\a\b\f\n\t\r\v'
 HEX = '\xad\x0a\x0d'
-OCTAL = '\o123\o000'
+FALSE_OCTAL = '\o123\o000'  # Not octal in Python
+OCTAL = '\123\000'
+NOT_OCTAL = '\888\999'
+NUL = '\0'
 UNICODE = u'\u1234'
 HIGH_UNICODE = u'\U0000abcd'
 QUOTES = '\'\"'
